--- a/rootdir/root/factory_init.rc
+++ b/rootdir/root/factory_init.rc
@@ -1,7 +1,17 @@
-
+import /init.environ.rc
 on early-init
     # Set init and its forked children's oom_adj.
-    write /proc/1/oom_adj -16
+    write /proc/1/oom_score_adj -1000
+
+    # Apply strict SELinux checking of PROT_EXEC on mmap/mprotect calls.
+    write /sys/fs/selinux/checkreqprot 0
+
+    # Set the security context for the init process.
+    # This should occur before anything else (e.g. ueventd) is started.
+    setcon u:r:init:s0
+
+    # Set the security context of /adb_keys if present.
+    restorecon /adb_keys
 
     start ueventd
 
@@ -19,19 +29,6 @@ on init
 sysclktz 0
 
 loglevel 5
-    write /proc/bootprof "INIT: on init start"
-
-# setup the global environment
-    export PATH /sbin:/vendor/bin:/system/sbin:/system/bin:/system/xbin
-    export LD_LIBRARY_PATH /vendor/lib:/system/lib
-    export ANDROID_BOOTLOGO 1
-    export ANDROID_ROOT /system
-    export ANDROID_ASSETS /system/app
-    export ANDROID_DATA /data
-    export ANDROID_STORAGE /storage
-
-    export ASEC_MOUNTPOINT /mnt/asec
-    export LOOP_MOUNTPOINT /mnt/obb
 
 # Backward compatibility
     symlink /system/etc /etc
@@ -65,6 +62,30 @@ loglevel 5
     write /proc/sys/kernel/sched_wakeup_granularity_ns 2000000
     write /proc/sys/kernel/sched_compat_yield 1
     write /proc/sys/kernel/sched_child_runs_first 0
+# Healthd can trigger a full boot from charger mode by signaling this
+# property when the power button is held.
+on property:sys.boot_from_charger_mode=1
+    class_stop charger
+    trigger late-init
+
+# Load properties from /system/ + /factory after fs mount.
+on load_all_props_action
+    load_all_props
+
+# Mount filesystems and start core system services.
+on late-init
+    trigger early-fs
+    trigger fs
+    trigger post-fs
+    trigger post-fs-data
+
+    # Load properties from /system/ + /factory after fs mount. Place
+    # this in another action so that the load will be scheduled after the prior
+    # issued fs triggers have completed.
+    trigger load_all_props_action
+
+    trigger early-boot
+    trigger boot
 
 # mount different fs start
 on fs
@@ -81,19 +102,13 @@ on fs
 on post-fs
     # once everything is setup, no need to modify /
     mount rootfs rootfs / ro remount
-    chown system system /system/data
     mkdir /system/cache 0770 system cache
 
-    # We chown/chmod /data again so because mount is run as root + defaults
-    chown system system /system/data
-    chmod 0770 /system/data
-    # We chown/chmod /data again so because mount is run as root + defaults
-    chown system system /data
-    chmod 0771 /data
-
-    # Same reason as /data above
+    # We chown/chmod /cache again so because mount is run as root + defaults
     chown system cache /cache
     chmod 0770 /cache
+    # We restorecon /cache in case the cache partition has been reset.
+    restorecon_recursive /cache
 
     mkdir /cache/recovery 0770 system system
 
@@ -116,6 +131,15 @@ on post-fs
     chmod 0440 /proc/kmsg
     chown root system /proc/sysrq-trigger
     chmod 0220 /proc/sysrq-trigger
+
+    # make the selinux kernel policy world-readable
+    chmod 0444 /sys/fs/selinux/policy
+on post-fs-data
+    # We chown/chmod /data again so because mount is run as root + defaults
+    chown system system /data
+    chmod 0771 /data
+    # We restorecon /data in case the userdata partition has been reset.
+    restorecon /data
 
 # create basic filesystem structure
     mkdir /data/nvram 0771 root system
@@ -223,11 +247,37 @@ on post-fs
     # GPIO
     chmod 0660 /dev/mtgpio
 
+    # Android SEC related device nodes
+    chmod 0660 /dev/sec
+    chown root system /dev/sec
+
+    # device info interface
+    chmod 0440 /dev/devmap
+    chown root system /dev/devmap
+
+
+    #change partition permission
+    exec /system/etc/partition_permission.sh
+
     chmod 0660 /dev/exm0
+    # Separate location for storing security policy files on data
+    mkdir /data/security 0711 system system
+
+    # Reload policy from /data/security if present.
+    setprop selinux.reload_policy 1
+
+    # Set SELinux security contexts on upgrade or policy update.
+    restorecon_recursive /data
+
 ## Custom pos_fs area (END)
 
+    # If there is no fs-post-data action in the init.<device>.rc file, you
+    # must uncomment this line, otherwise encrypted filesystems
+    # won't work.
+    # Set indication (checked by vold) that we have finished this action
+    setprop vold.post_fs_data_done 1
+
 on boot
-    start drvbd
 
 # basic network init
     ifup lo
@@ -236,38 +286,105 @@ on boot
 
 # Start default class, this line is very important!!
    class_start default
-   start sdcard
-   start installd
+   class_start core
+
+on nonencrypted
+    class_start main
+    class_start late_start
+
+on property:vold.decrypt=trigger_default_encryption
+    start defaultcrypto
+
+on property:vold.decrypt=trigger_encryption
+    start surfaceflinger
+    start encrypt
+
+on property:vold.decrypt=trigger_reset_main
+    class_reset main
+    start stop_modem
+
+on property:vold.decrypt=trigger_load_persist_props
+    load_persist_props
+
+on property:vold.decrypt=trigger_post_fs_data
+    trigger post-fs-data
+
+on property:vold.decrypt=trigger_restart_min_framework
+    class_start main
+    start start_modem
+
+on property:vold.decrypt=trigger_restart_framework
+    class_start main
+    class_start late_start
+    start nvram_daemon
+    start start_modem
+
+on property:vold.decrypt=trigger_shutdown_framework
+    class_reset late_start
+    class_reset main
+    start stop_modem
+
+service stop_modem /system/bin/md_ctrl 0
+    class main
+    disabled
+    oneshot
+
+service start_modem /system/bin/md_ctrl 1
+    class main
+    disabled
+    oneshot
 
 ## Daemon processes to be run by init.
 ##
 
-# Update the second boot logo
-# service bootlogoupdater /system/bin/boot_logo_updater
-#    oneshot
-
 service ueventd /sbin/ueventd
     class core
     critical
+    seclabel u:r:ueventd:s0
+
+service logd /system/bin/logd
+    class core
+    socket logd stream 0666 logd logd
+    socket logdr seqpacket 0666 logd logd
+    socket logdw dgram 0222 logd logd
+    seclabel u:r:logd:s0
 
 service console /system/bin/sh
     class core
     console
     disabled
-    user root
-    group log
+    user shell
+    group shell log
+    seclabel u:r:shell:s0
 
 on property:ro.debuggable=1
     start console
 
 # adbd is controlled via property triggers in init.<platform>.usb.rc
-service adbd /sbin/adbd
+service adbd /sbin/adbd --root_seclabel=u:r:su:s0
     class core
+    socket adbd stream 660 system system
+    disabled
+    seclabel u:r:adbd:s0
 
-service drvbd /system/bin/drvbd
-    class main
-    user system
-    group system
+service vold /system/bin/vold
+    class core
+    socket vold stream 0660 root mount
+    ioprio be 2
+
+# One shot invocation to deal with encrypted volume.
+service defaultcrypto /system/bin/vdc --wait cryptfs mountdefaultencrypted
+    disabled
+    oneshot
+    # vold will set vold.decrypt to trigger_restart_framework (default
+    # encryption) or trigger_restart_min_framework (other encryption)
+
+# One shot invocation to encrypt unencrypted volumes
+service encrypt /system/bin/vdc --wait cryptfs enablecrypto inplace default
+    disabled
+    oneshot
+    # vold will set vold.decrypt to trigger_restart_framework (default
+    # encryption)
 
 ## Custom service area (START)
 # Please add custom service below
@@ -283,21 +400,9 @@ service ccci_mdinit /system/bin/ccci_mdinit 0
 
 
 service nvram_daemon /system/bin/nvram_daemon
+    class main
     user root
     group system bluetooth
-    oneshot
-
-# DFO (Begin)
-service featured /system/bin/featured
-    user root
-    socket dfo stream 666 root system
-# DFO (End)
-
-service mdlogger /system/bin/mdlogger
-    class main
-    user shell
-    group shell system radio sdcard_rw inet
-    disabled
     oneshot
 
 service dualmdlogger /system/bin/dualmdlogger
@@ -311,23 +416,23 @@ service installd /system/bin/installd
     class main
     socket installd stream 600 system system
 
-service factory_no_image /system/bin/logwrapper /storage/sdcard0/factory/bin/factory
+service factory_no_image /storage/sdcard0/factory/bin/factory
     disable
     oneshot
 
-service factory_with_image /system/bin/logwrapper /sbin/factory
+service factory_with_image /sbin/factory
     disable
     oneshot
 #
 # Connectivity related services (Begin)
 #
 
-service wmtLoader /system/bin/logwrapper /system/bin/wmt_loader
+service wmtLoader /system/bin/wmt_loader
     user root
     group root
     oneshot
 
-service conn_launcher /system/bin/logwrapper /system/bin/6620_launcher -p /system/etc/firmware/
+service conn_launcher /system/bin/6620_launcher -p /system/etc/firmware/
     user system
     group system
     oneshot
@@ -341,7 +446,7 @@ service wlanLoader /system/bin/wlan_loader
 #    class main
 #    socket hald stream 0660 root system
 
-#service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant
+#service wpa_supplicant /system/bin/wpa_supplicant
 #    group wifi
 #    disabled
 #    oneshot
