--- a/rootdir/system/etc/audio_policy.conf
+++ b/rootdir/system/etc/audio_policy.conf
@@ -6,11 +6,11 @@
 # as well as the output device selected by default.
 # Devices are designated by a string that corresponds to the enum in audio.h
 
-global_configuration {
-  attached_output_devices AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_EARPIECE
-  default_output_device AUDIO_DEVICE_OUT_SPEAKER
-  attached_input_devices AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_REMOTE_SUBMIX
-}
+# global_configuration {
+#   attached_output_devices AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_EARPIECE
+#   default_output_device AUDIO_DEVICE_OUT_SPEAKER
+#   attached_input_devices AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_REMOTE_SUBMIX|AUDIO_DEVICE_IN_FM_TUNER
+# }
 
 # audio hardware module section: contains descriptors for all audio hw modules present on the
 # device. Each hw module node is named after the corresponding hw module library base name.
@@ -25,6 +25,44 @@ global_configuration {
 
 audio_hw_modules {
   primary {
+    global_configuration {
+      attached_output_devices AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_EARPIECE
+      default_output_device AUDIO_DEVICE_OUT_SPEAKER
+      attached_input_devices AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_FM_TUNER
+      audio_hal_version 3.0
+    }
+    devices {
+        headset {
+          type AUDIO_DEVICE_OUT_WIRED_HEADSET
+          gains {
+            gain_1 {
+              mode AUDIO_GAIN_MODE_JOINT
+              channel_mask AUDIO_CHANNEL_OUT_STEREO
+              min_value_mB -6400
+              max_value_mB 0
+              default_value_mB 0
+              step_value_mB 100
+              min_ramp_ms 0
+              max_ramp_ms 0
+            }
+          }
+        }
+        headphone {
+          type AUDIO_DEVICE_OUT_WIRED_HEADPHONE
+          gains {
+            gain_1 {
+              mode AUDIO_GAIN_MODE_JOINT
+              channel_mask AUDIO_CHANNEL_OUT_STEREO
+              min_value_mB -6400
+              max_value_mB 0
+              default_value_mB 0
+              step_value_mB 100
+              min_ramp_ms 0
+              max_ramp_ms 0
+            }
+          }
+        }
+    }
     outputs {
       primary {
         sampling_rates 44100
@@ -32,6 +70,18 @@ audio_hw_modules {
         formats AUDIO_FORMAT_PCM_16_BIT
         devices AUDIO_DEVICE_OUT_EARPIECE|AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_WIRED_HEADSET|AUDIO_DEVICE_OUT_WIRED_HEADPHONE|AUDIO_DEVICE_OUT_AUX_DIGITAL|AUDIO_DEVICE_OUT_ANLG_DOCK_HEADSET|AUDIO_DEVICE_OUT_DGTL_DOCK_HEADSET|AUDIO_DEVICE_OUT_ALL_SCO|AUDIO_DEVICE_OUT_FM_TX|AUDIO_DEVICE_OUT_DEFAULT
         flags AUDIO_OUTPUT_FLAG_PRIMARY
+        gains {
+          gain_1 {
+            mode AUDIO_GAIN_MODE_JOINT
+            channel_mask AUDIO_CHANNEL_OUT_STEREO
+            min_value_mB -6400
+            max_value_mB 0
+            default_value_mB 0
+            step_value_mB 100
+            min_ramp_ms 0
+            max_ramp_ms 0
+          }
+        }
       }
     }
     inputs {
@@ -39,11 +89,14 @@ audio_hw_modules {
         sampling_rates 8000|11025|12000|16000|22050|24000|32000|44100|48000
         channel_masks AUDIO_CHANNEL_IN_MONO|AUDIO_CHANNEL_IN_STEREO
         formats AUDIO_FORMAT_PCM_16_BIT
-        devices AUDIO_DEVICE_IN_COMMUNICATION|AUDIO_DEVICE_IN_AMBIENT|AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_WIRED_HEADSET|AUDIO_DEVICE_IN_AUX_DIGITAL|AUDIO_DEVICE_IN_VOICE_CALL|AUDIO_DEVICE_IN_BACK_MIC|AUDIO_DEVICE_IN_FM|AUDIO_DEVICE_IN_BLUETOOTH_SCO_HEADSET
+        devices AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_COMMUNICATION|AUDIO_DEVICE_IN_AMBIENT|AUDIO_DEVICE_IN_WIRED_HEADSET|AUDIO_DEVICE_IN_AUX_DIGITAL|AUDIO_DEVICE_IN_VOICE_CALL|AUDIO_DEVICE_IN_BACK_MIC|AUDIO_DEVICE_IN_FM_TUNER|AUDIO_DEVICE_IN_BLUETOOTH_SCO_HEADSET
       }
     }
   }
   a2dp {
+    global_configuration {
+        audio_hal_version 2.0
+    }
     outputs {
       a2dp {
         sampling_rates 44100
@@ -54,6 +107,9 @@ audio_hw_modules {
     }
   }
   usb {
+    global_configuration {
+        audio_hal_version 2.0
+    }
     outputs {
        default {
           sampling_rates 44100
@@ -64,6 +120,10 @@ audio_hw_modules {
     }
   }
   r_submix {
+    global_configuration {
+        attached_input_devices AUDIO_DEVICE_IN_REMOTE_SUBMIX
+        audio_hal_version 2.0
+    }
     outputs {
       r_submix {
         sampling_rates 48000
