--- a/rootdir/root/init.sprout_common.rc
+++ b/rootdir/root/init.sprout_common.rc
@@ -11,6 +11,8 @@ on init
     mkdir /protect_f 0771 system system
     mkdir /protect_s 0771 system system
 
+	export LD_PRELOAD /system/lib/libsprout.so
+
     # Change ION driver permission
     chmod 0666 /dev/ion
 
