sprout: sepolicy: this life of denials
Change-Id: I89c191189022a0f3815dd37dc25a7da2cbba6278

--- a/rootdir/root/init.sprout_common.rc
+++ b/rootdir/root/init.sprout_common.rc
@@ -11,7 +11,7 @@ on init
     mkdir /protect_f 0771 system system
     mkdir /protect_s 0771 system system
 
-	export LD_PRELOAD /system/lib/libsprout.so
+	export LD_SHIM_LIBS /system/lib/liblog.so|libsprout.so
 
     # Change ION driver permission
     chmod 0666 /dev/ion
