--- a/rootdir/root/init.sprout_common.rc
+++ b/rootdir/root/init.sprout_common.rc
@@ -5,11 +5,11 @@ import /init.modem.rc
 on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug
     setprop ro.mtk.hardware mt6582
-    export LD_SHIM_LIBS /system/lib/librilmtk.so|libshim_ril.so:/system/lib/libmtkjpeg.so|libshim_ril.so:/system/bin/wpa_supplicant|libshim_wpa_supplicant.so:/system/lib/hw/camera.mt6582.so|libshim_gui.so:/system/vendor/lib/libwvm.so|libshim_wvm.so:/system/lib/libcam.client.so|libcam_platform.so:/system/bin/mtk_agpsd|libshim_gps.so
 
 on init
     mkdir /protect_f 0771 system system
     mkdir /protect_s 0771 system system
+    export LD_PRELOAD "/system/lib/libshims.so"
 
 
     # Change ION driver permission
