sprout-common: init: go back to preload
Signed-off-by: Varun Chitre <varun.chitre15@gmail.com>

--- a/rootdir/root/init.sprout_common.rc
+++ b/rootdir/root/init.sprout_common.rc
@@ -8,7 +8,7 @@ on early-init
     setprop ro.mtk.hardware mt6582
 
 on init
-    export LD_SHIM_LIBS "/system/bin/wpa_supplicant|libsprout_shims.so"
+    export LD_PRELOAD "/system/lib/libsprout_shims.so"
     mkdir /protect_f 0771 system system
     mkdir /protect_s 0771 system system
 
