sprout-common: update RIL class
* revert https://github.com/SamarV-121/android_device_google_sprout-common/commit/cd3e7b2eaf8c3a1baf26bc0f589ff15ac114839d
* remove unwanted modem messages

--- a/configs/hostapd_default.conf
+++ b/configs/hostapd_default.conf
@@ -59,7 +59,7 @@ ssid=AndroidAP
 # Operation mode (a = IEEE 802.11a, b = IEEE 802.11b, g = IEEE 802.11g,
 # n =  IEEE 802.11n, g_only = IEEE 802.11g_only, n_only = IEEE 802.11n_only,
 # Default: IEEE 802.11n
-hw_mode=n
+hw_mode=g
 
 # Channel number (IEEE 802.11)
 # (default: 0, i.e., not set)
