--- a/rootdir/ueventd.sprout.rc
+++ b/rootdir/ueventd.sprout.rc
@@ -18,7 +18,7 @@
 /dev/gps                 0660  gps         system
 
 # WIFI
-/dev/wmtWifi             0660  system      system
+/dev/wmtWifi             0660  wifi        wifi
 
 #FMRadio
 /dev/fm                  0660  media       media
