--- a/rootdir/ueventd.sprout.rc
+++ b/rootdir/ueventd.sprout.rc
@@ -1,6 +1,6 @@
 #change partition permission
 /dev/block/mmcblk0p1      0640	 root	    system
-/dev/block/mmcblk0p2      0640	 root	    system
+/dev/block/mmcblk0p2      0660	 root	    system
 /dev/block/mmcblk0p18     0660	 system	    system
 /dev/misc-sd              0660   root       system
 
@@ -11,7 +11,7 @@
 /dev/wmtdetect           0660  system      system
 
 # BT
-/dev/stpbt               0660  bluetooth   net_bt_stack
+/dev/stpbt               0660  bluetooth   bluetooth
 
 # GPS
 /dev/stpgps              0660  gps         gps
