sprout: init: Resolve kernel trace_marker permissions on post-fs
 * The permissions were not set to 222 instead of 220,
    thus introducing regular logs from libcutils:
    "cutils-trace: Error opening trace file: Permission denied (13)"

 * Refers to frameworks/native/cmds/atrace/atrace.rc

Change-Id: I236ea25d2f2068f9f86a43492807f5f05e92da96
Signed-off-by: SamarV-121 <samarvispute121@gmail.com>

--- a/rootdir/root/init.sprout.rc
+++ b/rootdir/root/init.sprout.rc
@@ -96,6 +96,9 @@ on post-fs
     chown root system /proc/bootprof
     chown root system /proc/mtprof/cputime
 
+    # Allow writing to the kernel trace log.
+    chmod 0222 /sys/kernel/debug/tracing/trace_marker
+
 on post-fs-data
     # create basic filesystem structure
     mkdir /data/nvram 0771 root system
