sprout: wpa_supplicant: Move control sockets to /data/vendor
Treble compliance.

Bug: 70228425
Bug: 70393317
Test: complete wifi test in b/70393317
Test: verify sockets exist in /data/vendor/wifi/wpa/sockets

Change-Id: I0bfc3a351419f0a03498e79664949f353369bf1b
Signed-off-by: SamarV-121 <samarvispute121@gmail.com>

--- a/rootdir/root/init.sprout_common.rc
+++ b/rootdir/root/init.sprout_common.rc
@@ -452,9 +452,9 @@ on post-fs-data
     chown gps gps /sys/devices/virtual/gpsdrv/gps/status
 
 # WiFi
-    mkdir /data/misc/wifi 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/wpa_supplicant 0770 wifi wifi
+    mkdir /data/vendor/wifi 0770 wifi wifi
+    mkdir /data/vendor/wifi/wpa 0770 wifi wifi
+    mkdir /data/vendor/wifi/wpa/sockets 0770 wifi wifi
     chown wifi wifi /data/misc/wifi
     chown wifi wifi /dev/wmtWifi
 #
@@ -670,10 +670,10 @@ service rmmod rmmod
 
 service wpa_supplicant /system/vendor/bin/hw/wpa_supplicant \
     -I/system/etc/wifi/p2p_supplicant_overlay.conf -N \
-	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin \
+	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf  \
 	-I/system/etc/wifi/wpa_supplicant_overlay.conf \
-    -puse_p2p_group_interface=1 \
-	-O/data/misc/wifi/sockets -g@android:wpa_wlan0
+    -O/data/vendor/wifi/wpa/sockets -puse_p2p_group_interface=1 \
+	-e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
     #   user wifi
