sprout: rootdir: Update charger init service
* The charger binary is moved to /system/bin. Also the label got changed
  to charger. Update it accordingly.

* Make charger binary run as system instead of root. Since it
  needs to handle input key events, add input as a supplemental
  group in addition to system and graphics.

Change-Id: Id1dc46f335087147b7d8cf674664c26f0b511de1
Signed-off-by: SamarV-121 <samarv121@pixelexperience.org>

--- a/rootdir/root/init.sprout.rc
+++ b/rootdir/root/init.sprout.rc
@@ -806,9 +806,11 @@ service thermal_manager /system/bin/thermal_manager
     user root
     oneshot
 
-service battery_charger /charger
+service charger /system/bin/charger
     class charger
-    seclabel u:r:healthd:s0
+    user system
+    group system graphics input
+    seclabel u:r:charger:s0
 #
 # Connectivity related services (Begin)
 #
