--- a/rootdir/root/init.sprout.rc
+++ b/rootdir/root/init.sprout.rc
@@ -810,6 +810,7 @@ service charger /system/bin/charger
     class charger
     user system
     group system graphics input
+    capabilities SYS_BOOT
     seclabel u:r:charger:s0
 #
 # Connectivity related services (Begin)
